--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "fs": "^0.0.1-security",
     "handlebars": "^4.7.7",
     "jsonwebtoken": "^9.0.0",
+    "nodemailer": "^6.9.4",
     "passport": "^0.6.0",
     "passport-github": "^1.1.0",
     "passport-local": "^1.0.0",
