--- a/package.json
+++ b/package.json
@@ -11,13 +11,17 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.1.0",
+    "cron": "^2.4.4",
+    "ejs": "^3.1.9",
     "express": "^4.18.2",
     "fs": "^0.0.1-security",
     "handlebars": "^4.7.7",
     "jsonwebtoken": "^9.0.0",
-    "nodemailer": "^6.9.4",
+    "mongoose": "^7.5.2",
+    "nodemailer": "^6.9.5",
     "passport": "^0.6.0",
     "passport-github": "^1.1.0",
+    "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
     "socket.io": "^4.6.1",
     "swagger-jsdoc": "^6.2.8",
